[package]
name = "catetool"
version = "0.1.2"
authors = ["Filip Szczerek <ga.software@yahoo.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "0.6.2"
cgmath = "0.17.0"
# using fitsio-sys (raw C bindings) temporarily until fitsio is fixed and builds under Windows 64-bit
# (https://github.com/mindriot101/rust-fitsio/issues/118)
#
# fitsio = "0.15.0"
fitsio-sys = "*"
num-complex = "0.2.4"
num-traits = "0.2.11"
rayon = "*"
strum = "0.18.0"
strum_macros = "0.18.0"

[build-dependencies]
chrono = "0.4.7"
